--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'groovy'
+    id 'codenarc'
     id 'idea'
 }
 
@@ -11,8 +12,18 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.12'
+    compile gradleApi()
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+}
+
+codenarc {
+    configFile = file("${projectDir}/config/codenarc/ruleset.groovy")
+
+    reportFormat = 'html'
+    reportsDir = file("${buildDir}/reports/codenarc")
+
+    toolVersion = '1.0'
 }
 
 tag {
