--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'groovy'
     id 'codenarc'
+    id 'jacoco'
     id 'idea'
 }
 
@@ -24,6 +25,14 @@ codenarc {
     reportsDir = file("${buildDir}/reports/codenarc")
 
     toolVersion = '1.0'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled false
+    }
 }
 
 tag {
