Define the `validateJenkinsJobDsl` task
This commit lays out the foundation for having the task and the
`jenkins` default configuration. The actual implementation is missing.

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ gradle-app.setting
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+*.iml
+*.ipr
 
 # Gradle:
 .idea/**/gradle.xml
